fix: z-index snackbar

--- a/client/assets/styles/variables/_z-index.scss
+++ b/client/assets/styles/variables/_z-index.scss
@@ -1,4 +1,4 @@
-$snackbar-index: 120;
+$snackbar-index: 300;
 $modal-index: 100;
 $menu-index: 90;
 $select-index: 110;
